* What's new in version 2.9

- Embedded-C functions may now use the new STAP_PRINTF(fmt, ...)
  macro for output.

- New tapset functions arch_bytes() and uarch_bytes() to obtain address size
  for kernel and user space respectively.

- New tapset function switch_file() allows control over rotation
  of output files.

- The [nd_]syscall tapset got autodocumented. Related paragraph got added to PDF
  and HTML tapset reference. Also a new tapset::syscall 3stap man page got added.

- Embedded-C functions with parameter arity-0 can now be marked with
  the /* stable */ /* pure */ pragmas, if (roughly speaking) the
  function is side-effect-free and idempotent.  The translator may
  execute these speculatively and have their results memoized.  This
  lets probes with multiple calls to such functions run faster. 
  
  Context variable ($foo) getter functions (in non-guru mode), and
  numerous tapset functions are now marked as /* stable */ /* pure */.
  Several example scripts have been modified to eschew explicit
  memoization.

- Callee probe points now support '.return' and '.call' suffix.
  For example,

    process("proc").function("foo").callee("bar").return

  will fire upon returning from bar when called by foo.

    process("proc").function("foo").callee("bar").call

  will only fire for non-inlined callees.

- The following tapset variables and functions are deprecated in
  version 2.9:
  - The '__int32_compat' library macro got deprecated in favor of
    new '__compat_long' library macro.
  - The 'uargs' convenience variable of the 'seccomp' syscall probe
    got deprecated in favor of new 'uargs_uaddr' variable.

- SystemTap has reduced its memory consumption by using interned_strings (a
  wrapper for boost::string_ref) in place of std::string instances. The change
  is to reduce the number of duplicate strings created by replacing them with
  interned_strings which act like pointers to existing strings.
